# feniqs_lite

./: CONTRIBUTING.md  README.md  pyproject.toml
db/: timescale_benchmarks.sql
feniqs_daemon/: README.md  main.py
feniqs_daemon/tools/: input_arguments.py
feniqs_lib/backends/plugins/: braket_cpu_plugin.py  cirq_cpu_plugin.py  mimiq_cloud_plugin.py  mimiq_julia_cpu_plugin.py  mqt_ddsim_cpu_plugin.py  pennylane_cpu_plugin.py  pennylane_gpu_plugin.py  projectq_cpu_plugin.py  pyqrack_cpu_plugin.py  qiskit_aer_cpu_plugin.py  qiskit_aer_gpu_plugin.py  qiskit_cloud_plugin.py  qmatchatea_cpu_plugin.py  qmatchtea_gpu_plugin.py  qrisp_cpu_plugin.py  qsimcirq_cpu_plugin.py  qsimcirq_gpu_plugin.py  quantanium_cpu_plugin.py  quimb_mps_cpu_plugin.py  quimb_nt_cpu_plugin.py  qulacs_cpu_plugin.py  qulacs_gpu_plugin.py  stim_cpu_plugin.py  yao_cpu_plugin.py
feniqs_lib/backends/quantum_backends/: abstract_backend.py  abstract_cloud_backend.py  abstract_config.py  abstract_julia_backend.py  abstract_simulator_backend.py  braket_abstract_backend.py  braket_simulator_backend.py  cirq_abstract_backend.py  cirq_cloud_backend.py  cirq_simulator_backend.py  mimiq_cloud_backend.py  mimiq_julia_backend.py  mqt_ddsim_backend.py  pennylane_abstract_backend.py  pennylane_cloud_backend.py  pennylane_simulator_backend.py  projectq_backend.py  pyqrack_backend.py  qasm_parser.py  qiskit_abstract_backend.py  qiskit_cloud_backend.py  qiskit_simulator_backend.py  qmatchatea_backend.py  qrisp_backend.py  (+7 more)
feniqs_lib/db/: abstract_db.py  benchmark_db.py  config_db.py  example.py  utils_db.py
feniqs_lib/managers/: hook_specs.py  plugin_manager.py  singleton_plugin_manager.py  venv_manager.py
feniqs_lib/tools/: backends_tools.py  constants.py  helper_qc.py  logger_api.py  system_info.py  welcome.py
feniqs_optimizer/: README.md  feniqs_optimizer.py  get_mps_param.py  run_optimizer.py
feniqs_optimizer/data/: labels.csv
feniqs_tools/db/: README.md  helper_db.py  insert_ex.json
feniqs_tools/visualization/: README.md  create-table-from-json.py  heatmap-elo-nt-sim.py  heatmap-qc-complexity.py  plot4panel.py  radar-scalability.py
yaml/: config_backend.yaml  db_config.yaml  optimizator.yaml  venv_deps.yaml
(+14 files in other folders)
